<resources>
    <string name="app_name">Unacceptable Health</string>
    <string name="api_sub_name">health</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Unacceptable Health</string>
    <string name="nav_header_subtitle">The perfect balance between happy and healthy!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_title_exercise">Exercise</string>
    <string name="nav_title_nutrition">Nutrition</string>
    <string name="nav_title_recipes">Recipes</string>
    <string name="nav_title_goals">Goals</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_recipe_list">Recipes</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="title_activity_food_database">Food Database</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="name">Name</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="select_ingredient">Select An Ingredient</string>
    <string name="amount">Amount</string>
    <string name="measure">Measure</string>
    <string name="save">Save</string>
    <string name="instructions">Instructions</string>
    <string name="title_activity_view_daily_log"></string>
    <string name="used_flonase">Used Flonase?</string>
    <string name="create_daily_log">Create Daily Log</string>
    <string name="bad_allergies">Bad Allergies</string>
    <string name="starting_allergies">Allergies Starting</string>
    <string name="allergy_insurance">Allergy Insurance</string>
    <string name="had_headache">Had Headache</string>
    <string name="work_day">Work Day?</string>
    <string name="rate_work">Rate your work day</string>
    <string name="rate_day">Rate your non-working day.</string>
    <string name="mindful_moment">Today\'s Mindful Moment</string>
    <string name="overall_notes">Overall Notes For The Day</string>
    <string name="healthy_rating">How healthy did you feel?</string>
    <string name="bbd">BBD?</string>
    <string name="notification_channel">Notification Channel</string>
    <string name="channel_description">My notification channel</string>
    <string name="NOTIFICATION_CHANNEL_ID">beer.unacceptable.unacceptablehealth</string>
    <string name="view_daily_log">Daily Logs</string>
    <string name="title_activity_daily_log_list">Daily Logs</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_debug_tool">Debug Tool</string>
    <string name="pref_server">Server to connect to</string>
    <string-array name="list_preference_server">
        <item>Desktop</item>
        <item>HealthNet</item>
        
    </string-array>
    <string-array name="list_preference_server_values">
        <item>HealthNet_Desktop</item>
        <item>HealthNet</item>
        
    </string-array>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="brief_goal_description">Brief Goal Description</string>
    <string name="goal_start_date">Start Date</string>
    <string name="goal_end_date">End Date</string>
    <string name="description">Description</string>
    <string name="goal_items_header">Goal Items</string>
    <string name="create_goal_based_on_week">Create Goal Based On Week</string>
    <string name="select_starting_date">Select a Starting Date</string>
    <string name="select_ending_date">Select an Ending Date</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="exercise_label">Exercise</string>
    <string name="exerciseplan">Exercise Plan</string>
    <string name="reps_label">Reps</string>
    <string name="weight_label">lbs</string>
    <string name="time_label">Time</string>
    <string name="sets">Sets</string>
    <string name="perform_workout">Start Workout</string>
    <string name="finish_set">Finish Set</string>
    <string name="sets_remaining">Sets Remaining</string>
    <string name="start_timer">Start Timer</string>
    <string name="copy_to_new_workoutplan">Copy To New</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="adjustAllReps">Adjust All Reps By 2</string>
    <string name="view_history">View History</string>
</resources>