<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"

      tools:context="beer.unacceptable.unacceptablehealth.Screens.ViewWorkoutPlan">

    <item
        android:id="@+id/perform_workout"
        android:orderInCategory="40"
        android:title="@string/perform_workout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/adjustAllReps"
        android:orderInCategory="45"
        android:title="@string/adjustAllReps"
        />
    <item
        android:id="@+id/save_workoutplan"
        android:orderInCategory="50"
        android:title="@string/save"
        />
    <item
        android:id="@+id/copy_to_new_workoutplan"
        android:orderInCategory="50"
        android:title="@string/copy_to_new_workoutplan"
        />
    <item
        android:id="@+id/view_workoutplan_history"
        android:orderInCategory="60"
        android:title="@string/view_history"/>

</menu>