<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_title_exercise"/>
        <item
            android:id="@+id/nav_nutrition"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_title_nutrition"/>
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_title_recipes"/>

    </group>

    <item android:title="Setup">
        <menu>
            <item
                android:id="@+id/nav_goals"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nav_title_goals"/>
        </menu>
    </item>

</menu>
