<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Screens.CreateGoal"
    tools:showIn="@layout/activity_create_goal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <EditText
            android:id="@+id/goal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/brief_goal_description"
            android:inputType="text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goal_start_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goal_start_date"/>

            <TextView
                android:id="@+id/goal_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:text="@string/select_starting_date"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/goal_end_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.07"
                android:text="@string/goal_end_date"/>

            <TextView
                android:id="@+id/goal_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:ems="10"
                android:text="@string/select_ending_date"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/goal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:hint="@string/description"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/goal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/goal_amount"
                android:inputType="numberDecimal"/>

            <Spinner
                android:id="@+id/goal_amount_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <Switch
            android:id="@+id/goal_create_based_on_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_goal_based_on_week"/>

        <TextView
            android:id="@+id/goal_items_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_items_header"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <!--<android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/goalitem_tablayout">
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/goalitems_view_pager">


        </android.support.v4.view.ViewPager>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/goal_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>