<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Screens.PerformWorkout"
    tools:showIn="@layout/activity_perform_workout"
    android:id="@+id/performWorkoutWorkoutView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_workout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="TextView"
            android:textAlignment="center"
            android:textSize="48sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:id="@+id/ll_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>

            <EditText
                android:id="@+id/weight_number"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:text="W"
                android:textAlignment="textEnd"
                android:textSize="32sp"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true"/>

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/weight_label"
                android:textSize="32sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decreaseRep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/minus"/>

            <TextView
                android:id="@+id/rep_number"
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:text="Reps"
                android:textAlignment="textEnd"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/rep_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reps_label"
                android:textSize="32sp"/>

            <Button
                android:id="@+id/increaseRep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/set_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="5dp"
                android:text="Set Number"
                android:textAlignment="center"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/set_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sets_remaining"
                android:textSize="32sp"
                android:visibility="gone"/>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <LinearLayout
            android:id="@+id/ll_workout_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">

            <Chronometer
                android:id="@+id/workout_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/workout_timer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/start_timer"/>
        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/exercise_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:paddingHorizontal="10dp"/>

        <Button
            android:id="@+id/btn_finish_set"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/finish_set"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>